# pyfew

./: .flake8  .pre-commit-config.yaml  MANIFEST.in  README.md  env.yml  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: build.yml  main.yml  pylint.yml
pyfew/features/: __init__.py  core.py  data_utils.py  sleep_feats.py
pyfew/features/feature_set/: default.yaml  full.yaml  minimal.yaml
tests/: test_core.py  test_data_loader.py
