[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | fig
  | notebooks
  | template
  | tests
)/
'''

[tool.pytest.ini_options]
markers = ["datafiles: load datafiles"]

